--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "datatables.net-bs4": "^1.10.20",
+        "datatables.net-buttons-bs4": "^1.6.1",
+        "datatables.net-colreorder-bs4": "^1.5.2",
+        "datatables.net-fixedheader-bs4": "^3.1.6",
+        "datatables.net-responsive-bs4": "^2.2.3",
+        "jszip": "^3.2.2",
+        "pdfmake": "^0.1.65"
     }
 }
