--- a/package.json
+++ b/package.json
@@ -12,23 +12,15 @@
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
-        "cross-env": "^7.0",
+        "cross-env": "^7.0.2",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
+        "sass": "^1.26.2",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.11"
     },
-    "dependencies": {
-        "datatables.net-bs4": "^1.10.20",
-        "datatables.net-buttons-bs4": "^1.6.1",
-        "datatables.net-colreorder-bs4": "^1.5.2",
-        "datatables.net-fixedheader-bs4": "^3.1.6",
-        "datatables.net-responsive-bs4": "^2.2.3",
-        "jszip": "^3.2.2",
-        "pdfmake": "^0.1.65"
-    }
+    "dependencies": {}
 }
